fix bootstrap datetime picker not showing

--- a/fixes/animations.css
+++ b/fixes/animations.css
@@ -50,6 +50,7 @@ a.simple-link:hover,
 	pointer-events: none !important;
 }
 
+.bootstrap-datetimepicker-widget.dropdown-menu,
 .open > .dropdown-menu,
 .tt-menu.tt-open,
 .notifications-container.open,
